Tue Nov 27 15:41:43 2001  George Lebl <jirka@5z.com>

	* gnome-util.[ch], gnome-exec.c, gnome-url.c: move
	  gnome_is_program_in_path to deprecated and make it a macro
	  that just resolves to g_find_program_in_path which is
	  smarter and all that good stuff.

2001-11-21  Michael Meeks  <michael@ximian.com>

	* gnome-program.c (gnome_program_preinit),
	(gnome_program_initv, gnome_program_instance_init),
	(gnome_program_postinit): remove _massive_ debug spew,
	all trying ( unsuccessfully ) to discover that it is in
	fact pango that takes > 1 sec. to initialize - which it
	does idly.

Tue Nov 20 15:44:49 2001  Owen Taylor  <otaylor@redhat.com>

	* gnome-marshal-main.c gnome-program.c test-libgnome.c: 
	Remove excess gobject/* includes.

2001-11-14  Michael Meeks  <michael@ximian.com>

	* gnome-macros.h: update for new bonobo.

2001-11-12  Darin Adler  <darin@bentspoon.com>

	* gnome-macros.h: Remove the "_HANDLER" from the macro name.
	Before it's too late!

2001-11-12  Darin Adler  <darin@bentspoon.com>

	* gnome-macros.h: Took out unused parameter of the
	GNOME_CLASS_BOILERPLATE macro. Broke macro into pieces so it can
	be reused by bonobo.
	
	* gnome-program.c: Pass one less argument to
	GNOME_CLASS_BOILERPLATE.

Tue Nov 06 23:56:12 2001  George Lebl <jirka@5z.com>

	* gnome-macros.h: chain the class_init func so that we get
	  the parent_class pointer in the class_init function rather then
	  in the get_type function to reduce get_type overhead.

2001-11-02  Michael Meeks  <michael@ximian.com>

	* gnome-init.c (bonobo_activation_pre_args_parse),
	(bonobo_activation_post_args_parse): don't double init & leak.

Wed Oct 31 18:20:44 2001  Jonathan Blandford  <jrb@redhat.com>>

	* gnome-help.c (gnome_help_display): Simple variant of showing
	help function.  The one that 90% of users will use.
	(gnome_help_display_with_doc_id): Full variant.
	(gnome_help_display_desktop): Fix up a bit.

	* gnome-i18n.c: doc updates.

2001-10-30  jacob berkman  <jacob@ximian.com>
